fix alignment for new kindle OS update

--- a/static/styles.css
+++ b/static/styles.css
@@ -56,6 +56,7 @@ table {
 body, html{
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 body {
@@ -203,7 +204,7 @@ body {
 
 .feed-item {
   overflow: hidden;
-  height: 216px;
+  height: 208px;
   width: 50%;
   float: left;
   padding: 10px;
@@ -259,6 +260,7 @@ body {
      text-overflow: ellipsis;
   font-size: 1.8em;
   padding: 20px 120px;
+  border-top: 4px solid lightgrey;
   border-bottom: 4px solid lightgrey;
   height: 92px;
   text-align: center;
@@ -280,7 +282,7 @@ body {
 }
 .feed-bar {
   position: fixed;
-  bottom: 0px;
+  bottom: 40px;
   left: 0px;
   right: 0px;
   background: white;
